--- a/Nav-Bar/Hero_Nav.html
+++ b/Nav-Bar/Hero_Nav.html
@@ -15,6 +15,7 @@
   <a href="/Explore/Explore_index.html"></a>
   <a href="/Support/support_index.html"></a>
   <a href="/HeroPage/index.html"></a>
+  <a href="/FindDealer/Find_Dealer_index.html"></a>
 </head>
 <body>
 
