--- a/FindDealer/Find_Dealer_index.html
+++ b/FindDealer/Find_Dealer_index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Find a Dealer - Magnus Neo</title>
-  <link rel="stylesheet" href="/FindDealer/Find_Dealer_style.css" />
+  <link rel="stylesheet" href="Find_Dealer_style.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Libre Baskerville:wght@400;600&display=swap" rel="stylesheet">
-  <a href="Nav-Bar/Hero_Footer.html"></a>
+  <a href="Hero_Footer.html"></a>
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 
 <div id="NavBar-placeholder"></div>
 <script>
-  fetch("Nav-Bar/Hero_Nav.html")
+  fetch("/Nav-bar/Hero_Nav.html")
     .then(response => response.text())
     .then(data => {
       document.getElementById("NavBar-placeholder").innerHTML = data;
@@ -148,7 +148,6 @@
 
 <!-- ---------------------------------------------------------------------------------------------------------- -->
 <!-- Footer -->
-
 <div id="footer-placeholder"></div>
 <script>
   fetch("/Footer/Hero_Footer.html")
