--- a/Nav-Bar/Hero_Nav.html
+++ b/Nav-Bar/Hero_Nav.html
@@ -33,7 +33,7 @@
   </div>
   <nav class="nav-center">
     <ul>
-      <li onclick="window.location.href='/HeroPage/Hero_page_index.html'">Home</li>
+      <li onclick="window.location.href='/index.html'">Home</li>
       <li onmouseenter="showDropdown('cars')">Our Bike</li>
       <li onmouseenter="showDropdown('shop')">Shop</li>
       <li onmouseenter="showDropdown('owners')">Owners</li>
