--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <a href="Hero_Nav.html"></a>
   <a href="contact_index.html"></a>
   <a href="career_index.html"></a>
+  <a href="/FindDealer/Find_Dealer_index.html"></a>
 </head>
 <body>
                                 <!-- Navigation Bar -->
@@ -135,7 +136,7 @@
 
 <div class="card-section" data-aos="fade-right">
   <div class="card" >
-    <img src="https://www.volvocars.com/images/cs/v3/assets/blt618dcb179a89242d/blt7111b4e14392d11f/672099db93c9961b1e0635bf/Dicoverycard1.avif?branch=prod_alias&auto=avif&quality=85&format=webp&iar=0&w=1920&imdensity=1" alt="Electrification">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUvQd3CRZDjNekZrBIbUf-8Ls5sVtVQFLs_g&s">
     <h3>Rural Mobility</h3>
     <p>Easily navigate through farms, villages, and markets with our all-terrain-ready electric scooter. Designed to handle rural roads, it ensures smooth, reliable commutes every day.</p>
   </div>
@@ -145,7 +146,7 @@
     <p>Save on fuel and maintenance with our zero-emission electric drivetrain. The scooter runs on clean energy — a smart step towards a greener future and reduced daily expenses.</p>
   </div>
   <div class="card" data-aos="fade-right">
-    <img src="https://www.volvocars.com/images/cs/v3/assets/blt618dcb179a89242d/blt5afbd7862208f38e/67209a97f91e194788613468/Dicoverycard3.avif?branch=prod_alias&auto=avif&quality=85&format=webp&iar=0&w=1920&imdensity=1" alt="Sustainability">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTaeOby5ayJ9XKcOGw2ZVMt3iEgO7JeXlj7Vg&s">
     <h3>Utility-Driven Design</h3>
     <p>Built for work and comfort — with space for farm tools, produce, and heavy-duty tasks. It’s not just a scooter; it’s a reliable farm companion.</p>
   </div>
