--- a/EvTips/Ev_Tips_Index.html
+++ b/EvTips/Ev_Tips_Index.html
@@ -102,6 +102,23 @@
         });
       }
     });
+    // Show dropdown with fade-in animation
+function showDropdown(type) {
+  document.querySelectorAll(".mega-dropdown").forEach((drop) => {
+    drop.style.display = "none";
+  });
+
+  const target = document.getElementById("dropdown-" + type);
+  target.style.display = "block";
+  target.style.animation = "fadeIn 0.4s ease";
+}
+
+// Hide dropdown
+function hideDropdown() {
+  document.querySelectorAll(".mega-dropdown").forEach((drop) => {
+    drop.style.display = "none";
+  });
+}
   </script>
 </body>
 </html>
